# 2021-02-26-text-minhash

./: .gitignore  README.md  Snakefile  environment.yml  shell.nix
.github/workflows/: binder.yml  publish.yml
ansible/: Cargo.toml
ansible/src/: main.rs
binder/: Dockerfile
nix/: rust.nix  sources.json
