[package]
name = "ansible"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
camino = "1.0.1"
log = "0.4.14"
sourmash = "0.10.0"
structopt = "0.3.21"
twox-hash = "1.6.0"
